# reset-tolkien

./: .gitignore  CHANGELOG.md  Dockerfile  LICENSE  LISEZMOI.md  MANIFEST.in  Pipfile  README.md  pyproject.toml  requirements.txt
src/: test.py
src/resetTolkien/: __init__.py  __main__.py  cli.py  constants.py  format.py  hashes.py  resetTolkien.py  utils.py
src/resetTolkien/config/: default.yml
